updated h2 heading stream-three.html

--- a/stream-three.html
+++ b/stream-three.html
@@ -47,7 +47,7 @@
     <div class="card">
     <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
     <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="Github">
-    <h2>Git</h2>
+    <h2>Github</h2>
     </a>
     </div>
 
